# cmake-cpp-template

./: .gitignore  CMakeLists-clang.txt  CMakeLists-gnu.txt  CMakeLists-rpi.txt  CMakeLists.txt  README.org  Rakefile  conanfile.txt  toolchains-armbian.cmake  toolchains-raspbian.cmake
.ccls-cache/@home@zhibin@Desktop@codes@cpp-projects@template/: src@main.cpp.blob
src/: main.c  main.cpp
test/: testing.cpp
