cmake_minimum_required(VERSION 3.7.13)
set(CMAKE_C_COMPILER /usr/bin/clang)
set(CMAKE_CXX_COMPILER /usr/bin/clang++)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_BUILD_TYPE debug)
aux_source_directory(src ALL_SRCS)
project(fuck_gayan)
include_directories(include)
add_executable(lesliebinbin ${ALL_SRCS})
# target_link_libraries (lesliebinbin gmock gtest gtest_main pthread)

# target_link_libraries(fuck_gayan PRIVATE numerics)
